8190378: Removal of CORBA and Java EE modules
Reviewed-by: rriggs, alanb, mchung, erikj, goetz